cluster-service/cs-debug-jobs/testdata/zz_fixture_TestHelmTemplate_cs_debugjobs_enabled.yaml
---
# Source: cs-debug-jobs/templates/istio.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-shell-script-executor-to-clusters-service
  namespace: 'clusters-service'
spec:
  action: "ALLOW"
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/clusters-service/sa/cs-shell-script-executor"
    to:
    - operation:
        ports:
        - "8000"
  selector:
    matchLabels:
      app: "clusters-service"
